--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" class="full-height">
 
@@ -22,41 +21,40 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
-  <body>
-
-      <!-- Start your project here-->
+  <body data-spy="scroll" data-target="#navbar">
       <!--Main Navigation-->
       <header>
 
-          <nav class="navbar navbar-expand-lg navbar-dark black fixed-top">
-              <div class="container">
-                  <a class="navbar-brand" href="#"><strong>Amjed Muhsin</strong></a>
-                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                      <ul class="navbar-nav mr-auto">
+          <div id="navbar">
+              <nav class="navbar navbar-expand-lg navbar-dark black fixed-top">
+                  <div class="container">
+                      <a class="navbar-brand" href="#"><strong>AMJED MUHSIN</strong></a>
+                      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                          <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                          <ul class="navbar-nav mr-auto">
 
-                          <li class="nav-item active">
-                              <a class="nav-link" href="#home">Home<span class="sr-only">(current)</span></a>
-                          </li>
+                              <li class="nav-item">
+                                  <a class="nav-link active" href="#home">HOME<span class="sr-only">(current)</span></a>
+                              </li>
 
-                          <li class="nav-item">
-                              <a class="nav-link" href="#background">Background</a>
-                          </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="#background">BACKGROUND</a>
+                              </li>
 
-                          <li class="nav-item">
-                              <a class="nav-link" href="#resume">Résumé</a>
-                          </li>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="#resume">Résumé</a>
+                              </li>
 
-                          <li class="nav-item">
-                              <a class="nav-link" href="#work">Work</a>
-                          </li>
-                      </ul>
+                              <li class="nav-item">
+                                  <a class="nav-link" href="#work">WORK</a>
+                              </li>
+                          </ul>
+                      </div>
                   </div>
-              </div>
-          </nav>
-
+              </nav>
+          </div>
           <div class="view intro-2" id="home">
               <div class="full-bg-img">
                   <div class="mask rgba-black-strong flex-center">
@@ -77,7 +75,7 @@
       <!--Main Navigation-->
 
       <!--Main Layout-->
-      <main class="text-center my-5" id="background">
+      <div class="text-center my-5" id="background">
 
           <div class="container" data-aos="fade-right">
 
@@ -110,7 +108,7 @@
                   </div>
               </div>
           </div>
-      </main>
+      </div>
       <!--Main Layout-->
 
 
@@ -210,11 +208,6 @@
           </div>
       </div>
 
-
-
-
-      <!-- /Start your project here-->
-
     <!-- SCRIPTS -->
     <!-- JQuery -->
     <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
@@ -225,11 +218,10 @@
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!--Main JavaScript-->
-    <script src="js/main.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
     <!-- Terminal JavaScript -->
-    <script src="js/terminal.js"></script>
+    <script type="text/javascript" src="js/terminal.js"></script>
     <!--Scroll script-->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
-
 </html>
