--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <div class="full-bg-img">
                   <div class="mask rgba-black-strong flex-center">
                       <div class="container">
-                          <div class="white-text text-center" data-aos="fade-up">
+                          <div class="white-text text-center" data-aos="fade-up" data-aos-duration="2000">
                               <h2>Hello, world! <i class="em em-wave"></i> <br></br>I'm a software engineer/developer.</h2>
                               <h5>computer hobbyist <i class="em em-nerd_face"></i></h5>
                               <br>
@@ -113,7 +113,7 @@
 
 
       <!--Resume-->
-      <div class="jumbotron vertical-center text-center my-5" id="resume">
+      <div class="jumbotron vertical-center text-center my-5" id="resume" data-aos="fade-left" data-aos-duration="2000">
           <div class="container">
               <p class="header">RÉSUMÉ</p>
               <div class="education">
@@ -148,8 +148,9 @@
           </div>
       </div>
 
-      <div class="jumbotron vertical-center text-center my-5" id="work">
+      <div class="jumbotron vertical-center text-center my-5" id="work" data-aos="fade-up" data-aos-duration="2000">
           <div class="container">
+              <p class="header">Work I Done</p>
               <div class="row justify-content-center">
                   <div class="card border-success mb-3" style="max-width: 50rem;">
                       <div class="card-header bg-transparent border-success">Bidding System</div>
@@ -188,10 +189,9 @@
                           <div class="card border-success mb-3" style="max-width: 50rem; height: 438px;">
                               <div class="card-header bg-transparent border-success">WeatheRR</div>
                               <div class="card-body text-success">
-                                  <h5 class="card-title"><img src="img/bid.jpg" style="width: 50%" /></h5>
+                                  <h5 class="card-title"><img src="img/weather.png" style="width: 50%; height: 160px;" /></h5>
                                   <p class="card-text"><b>WeatheRR</b> Android weather app works by using popular weather API in which it collects
-                                      the data from JSON objects and populate it in the backend while showing the values needed
-                                      of what the user need to see.
+                                      the data from JSON objects and populate it.
                                   </p>
                               </div>
                               <div class="card-footer bg-transparent border-success">
