--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                               <br>
                               <p>passionate for innovative technology and digital content.
                                   My main focus is to build clean code and use advanced algorithms to deliver the best user-experience apps with high performance.</p>
-                              <button class="btn btn-primary">DOWNLOAD RESUME      <i class="fa fa-newspaper-o mr-1"></i></button>
+                              <button class="btn btn-primary"><a href="MuhsinResume.pdf" download>DOWNLOAD RESUME      <i class="fa fa-newspaper-o mr-1"></i></button>
                           </div>
 
 
