--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@
                   <p class="card-text">Cross-platform native weather app for iOS and Android</p>
                 </div>
                 <div class="card-footer">
-                  <small class="text-muted">Last updated 3 mins ago</small>
+                              <div class="language-tag">Dart</div>
+                              <div class="etc-tag">Android-iOS Platform</div>
+                              <div class="etc-tag">Android Studio</div>
                 </div>
               </div>
               <div class="card">
